# -course_project

./: CMakeLists.txt  README.md  main.cpp  myFirstXML.xml  readme.md
src/: courseApp.cpp
vc2019/: Line.h  Resources.aps  course.sln  course.vcxproj  course.vcxproj.filters
vc2019/x64/Debug/: course.exe.recipe  course.vcxproj.FileListAbsolute.txt
vc2019/x64/Debug/course.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  course.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
